# multi-agent-land

./: .env.example  .gitignore  .mcp.json  AGENTS.md  README.md  app.py  modal_app.py  pyproject.toml  requirements.txt
.codex/: config.toml
.codex/hooks/: stop_check.py
.github/workflows/: hf_sync.yml
config/: media.yaml  models.yaml
config/agents/: beat-judge.yaml  chat-curious.yaml  chat-host.yaml  chat-skeptic.yaml  clue-gatherer.yaml  debate-judge.yaml  debater-a.yaml  debater-b.yaml  devils-advocate.yaml  echo.yaml  fortune-teller.yaml  hypothesis-former.yaml  mischief-critic.yaml  mystery-judge.yaml  pocket-actor.yaml  rafters-critic.yaml  scene-whisperer.yaml  secret-keeper.yaml  sprout-guesser.yaml  sprout-judge.yaml  spy-bex.yaml  spy-cara.yaml  spy-host.yaml  spy-nil.yaml  spy-ovo.yaml  storyteller-a.yaml  storyteller-b.yaml  table-judge.yaml
config/scenarios/: beat-battle.yaml  debate-duel.yaml  mystery-roots.yaml  open-table.yaml  oracle-grove.yaml  the-steeped.yaml  thousand-token-wood.yaml  twenty-sprouts.yaml
docs/: runbook-live-mode.md  vision.md
docs/adr/: 0001-event-ledger.md  0002-gradio-first.md  0003-small-specialist-agents.md  0004-document-as-we-build.md  0005-episodic-memory-as-ledger-view.md  0005-modal-model-serving.md  0006-context-builder-separates-prompt-assembly.md  0007-governor-as-runtime-safety-valve.md  0008-second-scenario-proves-modularity.md  0009-open-event-kinds.md  0010-per-agent-model-routing.md  0011-declarative-validatable-config.md  0012-capability-based-tool-contract.md  0013-token-governor-and-long-running.md  0014-modal-model-serving.md  0014-postgres-event-store.md  0015-litellm-gateway-modal-models.md  0016-instructor-structured-output.md  0017-mcp-tool-transport.md  0018-layered-semantic-memory-index.md  0019-single-model-catalogue-no-cloud-path.md  0020-mem0-hosted-cloud-memory-index.md  0021-fishbowl-ui-gradio-presenter.md  0022-per-agent-explicit-model-binding.md  0023-resilient-loop-and-shared-blackboard.md  0024-hugging-face-inference-backend.md  0024-observability.md  0025-scenario-adaptive-lab-per-run-config-editing.md  0026-run-lifecycle-and-history.md  0027-per-user-sessions-and-archive-replay.md  0028-session-stamped-events-and-scoped-recall.md  0029-competition-contract.md  0029-structured-verdicts.md  0030-arena-scenarios-and-offline-winners.md  0030-gpu-memory-snapshots-cold-start.md  0031-fp8-quantization-control.md  0032-llama-cpp-local-backend.md  0033-local-inproc-transformers-backend.md  0034-simplify-modal-serving-to-canonical-vllm.md  0035-hall-of-fame-leaderboard.md
docs/architecture/: config-system.md  fishbowl-ui.md  long-running.md  manifest-spec.md  memory-stack.md  model-routing.md  observability.md  observer-pattern.md  overview.md  persistence.md  roadmap.md  scenario-authoring.md  structured-output.md  subscription-routing.md  tool-contract.md  turn-lifecycle.md
docs/architecture/next-steps/: architecture-review-and-next-steps.md  arena-roadmap.md  fishbowl-ui.md  phase-2-reflection-structured.md  phase-3-persistence-recovery.md  phase-4-manifest-discovery-mcp.md  phase-5-long-running-durable.md  (+1 more)
docs/blog/: 00-field-notes-index.md  01-three-worlds-one-engine.md  02-the-woods-and-the-fishbowl.md  03-one-engine-three-costumes.md  04-how-a-small-agent-decides.md  05-the-ledger-is-the-database.md  building-for-hours.md  building-in-public.md  engine-architecture.md  state-of-the-wood.md
docs/journal/: 2026-06-07-foundation-scaffold.md  2026-06-07-modular-config-model-routing-tools.md  2026-06-07-phase-1-memory-second-scenario.md
docs/runbooks/: codex.md  demo.md  local-dev.md
docs/schema/: agent-manifest.md  events.md  scenario-config.md  world-config.md
docs/strategy/: codex-judge-rubric.md  hackathon-prize-map.md
modal/: README.md  app_google.py  app_images.py  app_nvidia.py  app_openbmb.py  app_tts.py  catalogue.py  client.py  curl_tests.sh  healthcheck.py  image_service.py  media_catalogue.py  openapi.yaml  pyproject.toml  registry.py  requirements.txt  service.py  tts_service.py  vllm_logging.py
modal/docs/: deploying.md  modal-llms.txt  openapi.md
scripts/: new_journal_entry.py  snapshot_progress.py
src/: __init__.py
src/agents/: __init__.py  base.py  commentator.py  competition.py  handlers.py  tiny_wood.py  twenty_sprouts.py
src/core/: conductor.py  config.py  context.py  events.py  governor.py  leaderboard.py  leaderboard_store.py  ledger.py  ledger_factory.py  manifest.py  memory.py  memory_index.py  observer.py  projections.py  registry.py  run_index.py  sqlalchemy_ledger.py  sqlite_ledger.py  structured.py
src/media/: __init__.py  inference.py  provider.py  router.py  stub_image.py  stub_speech.py  tools.py
src/models/: hf_catalogue.py  inference.py  litellm_provider.py  llamacpp_catalogue.py  llamacpp_server.py  local_catalogue.py  local_provider.py  modal_catalogue.py  openai_compat.py  provider.py  router.py
src/observability/: __init__.py  config.py  context.py  logging_setup.py  store.py  tracing.py
src/scenarios/: __init__.py  base.py  mystery_roots.py  thousand_token_wood.py
src/tools/: __init__.py  builtins.py  mcp_client.py  mcp_server.py  registry.py
src/ui/: __init__.py  render.py
tests/: conftest.py  test_commentator.py  test_conductor.py  test_config.py  test_context.py  test_engine.py  test_events.py  test_fishbowl.py  test_fishbowl_app.py  test_fishbowl_archive.py  test_fishbowl_feed.py  test_fishbowl_judging.py  test_fishbowl_lab.py  test_fishbowl_loop_safety.py  test_fishbowl_meters.py  test_fishbowl_mindcard.py  test_fishbowl_session.py  test_fishbowl_show.py  test_fishbowl_stage.py  test_fishbowl_theme.py  test_fishbowl_winner.py  test_governor.py  test_hf_catalogue.py  test_inference_backends.py  test_instructor.py  test_journal.py  test_leaderboard.py  test_leaderboard_store.py  test_ledger.py  test_litellm_provider.py  test_live_wiring.py  test_llamacpp_backend.py  test_local_backend.py  test_long_running.py  test_manifest.py  test_manifest_agent.py  test_mcp.py  test_media.py  test_memory.py  test_memory_index.py  (+23 more)
(+25 files in other folders)
