[project]
name = "multi-agent-land"
version = "0.1.0"
description = "Small-model multi-agent Gradio experience for Thousand Token Wood."
requires-python = ">=3.11"
dependencies = [
  "gradio>=4.44.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.1",
  "openai>=1.40.0",
  "pyyaml>=6.0",
  "modal>=1.4.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0",
]
# Durable event store backend (ADR-0014). Optional: the system runs fully
# offline on the in-memory ledger without these. psycopg is the Neon driver.
store = [
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3",
]
# Model gateway (ADR-0015). Optional: routes live profiles through LiteLLM to the
# OpenAI-compatible models served on Modal, with real per-call cost metering. The
# system runs fully offline on the deterministic stub without this installed;
# litellm is imported lazily so importing src.models.* never requires it.
litellm = [
  "litellm>=1.40",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["."]
